--- a/public/locale/pt.json
+++ b/public/locale/pt.json
@@ -29,11 +29,11 @@
     "CallToAction": "Contate me",
     "CallToActionResumeDev": "Curriculo Desenvolvedor de Software",
     "CallToActionResumeBA": "Curriculo Análista de Negócios",
-    "Profession": "Desenvolvedor",
-    "ExtraProfession": "Aspirante a Analista de negócios",
+    "Profession": "Desenvolvedor de Software",
+    "ExtraProfession": "Analista de Negócios",
     "PhoneNumber": "+5511934282440",
-    "ViewResumeDev": "https://docs.google.com/document/d/1sunVS8-psdI90JYLiLgU5omjdT3s0ulgRJ-YcKyGgTY/edit?usp=sharing",
-    "ViewResumeBA": "https://docs.google.com/document/d/1sunVS8-psdI90JYLiLgU5omjdT3s0ulgRJ-YcKyGgTY/edit?usp=sharing"
+    "ViewResumeDev": "https://docs.google.com/document/d/1uJwleO7-vvcjjdi56LGqITA5HRPaCbl3dUf_hP-2kqQ/export?format=pdf",
+    "ViewResumeBA": "https://docs.google.com/document/d/164pWjAdyt7dninlAWgKAx7UTEbLsmb25W-szf3ARs5Y/export?format=pdf"
   },
   "InfoCards": {
     "Education": {
